# sserver

./: CMakeLists-linux.txt  CMakeLists.txt  mkweb.py
app/: child.h  datatype.h
app/linux/: child.c  main.c
app/win/: child.c  main.c
core/: api.h  thread.h
core/linux/: api.c  thread.c
core/win/: api.c  thread.c
data/: hashtable.h  memory.h  queue.h
data/linux/: hashtable.c  memory.c  queue.c
data/win/: hashtable.c  memory.c  queue.c
net/: listen.h  request.h  response.h
net/linux/: listen.c  request.c  response.c
net/win/: listen.c  request.c  response.c
util/: config.h  global.h
util/linux/: config.c  global.c
util/win/: config.c  global.c
